package edu.iztech.utms.g02.utms_app.dal.user;

public enum UserRole {
    STUDENT,
    OIDB,
    YDYO,
    YGK,
    DEAN_OFFICE,
    FACULTY_BOARD
}
