package edu.iztech.utms.g02.utms_app.dal.user.repository;

import edu.iztech.utms.g02.utms_app.dal.user.entity.User;
import org.springframework.data.jpa.repository.JpaRepository;

import java.util.Optional;

public interface UserRepository extends JpaRepository<User, Integer> {

    Optional<User> findByEmail(String email);
}