@startuml UTMS_User_Auth_Design

title UTMS — User & Authentication Design

skinparam classAttributeIconSize 0
skinparam classFontSize 12
skinparam packageStyle rectangle
skinparam class {
    BackgroundColor White
    BorderColor #2C3E50
    ArrowColor #2C3E50
}
skinparam package {
    BorderColor #5D6D7E
}

' =============================================
' ENUMS
' =============================================

enum UserRole {
    STUDENT
    OIDB
    YDYO
    YGK
    DEAN_OFFICE
    FACULTY_BOARD
}

' =============================================
' BUSINESS LOGIC LAYER
' =============================================

package "Business Logic Layer" #FEF9E7 {

    package "Auth & Registration" #FDEBD0 {
        class AuthenticationService {
            +verifyCredentials(email : String, password : String)
            +hashPassword(password : String) : String
            +lockAccount(userId : Integer)
        }
        class RegistrationService {
            +validateEmailFormat(email : String)
            +checkEmailExists(email : String)
            +validatePasswordStrength(password : String)
            +hashPassword(password : String) : String
        }
        class ProfileService {
            +validatePhoneNumber(phone : String)
            +verifyCurrentPassword(password : String)
            +hashNewPassword(newPassword : String) : String
        }
        class EmailNotificationManager {
            +sendStatusUpdate(email : String, message : String)
        }
    }
}

' =============================================
' DATA ACCESS LAYER
' =============================================

package "Data Access Layer" #EBF5FB {

    package "User Domain" #D6EAF8 {
        abstract class User {
            -userId : Integer
            -email : String
            -passwordHash : String
            -lastLoginDate : LocalDate
            -isActive : Boolean
            -firstName : String
            -middleName : String
            -lastName : String
            -role : UserRole
        }
        class Student {
            -tckn : String
            -phoneNumber : String
            -dateOfBirth : LocalDate
            -kvkkAcceptedAt : LocalDateTime
            -gpa : Float
            -currentUniversity : String
            -currentDepartment : String
        }
        class Staff {
            -departmentId : Integer
        }

        interface UserRepository {
            +findByEmail(email : String) : Optional<User>
            +findById(userId : Integer) : Optional<User>
            +save(user : User) : User
        }
        interface StudentRepository {
            +findByTckn(tckn : String) : Optional<Student>
        }
        interface StaffRepository {
            +findByRole(role : UserRole) : List<Staff>
        }
    }

    package "Authentication" #D6EAF8 {
        class AuthToken {
            -tokenId : String
            -expiryDate : LocalDateTime
            -isValid : Boolean
        }

        interface AuthTokenRepository {
            +findById(tokenId : String) : Optional<AuthToken>
            +save(token : AuthToken) : AuthToken
            +delete(token : AuthToken)
        }
    }
}

' =============================================
' INHERITANCE
' =============================================

User <|-- Student
User <|-- Staff

' =============================================
' DOMAIN ASSOCIATIONS
' =============================================

User --> UserRole : role
User "1" -- "0..*" AuthToken : has >

' =============================================
' BUSINESS LOGIC -> DATA ACCESS DEPENDENCIES
' =============================================

AuthenticationService ..> UserRepository : uses
AuthenticationService ..> AuthTokenRepository : uses
RegistrationService ..> UserRepository : uses
RegistrationService ..> StudentRepository : uses
ProfileService ..> UserRepository : uses

@enduml
